--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="description" content="运维开发管理平台">
+    <meta name="author" content="西窗浪人">
+    <title>{% block title %}运维开发管理平台{% endblock %}</title>
+    <link rel="icon" href="{{url_for('static',filename='images/fav.ico')}}">
+    {% block css %}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/bootstrap.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='css/login.css')}}">
+    {% endblock %}
 </head>
 <body>
 
