重构前端代码

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>登陆后页面</title>
-</head>
-<body>
-这是登录后页面
-有授权验证
-再看一下
-</body>
-</html>
+{% extends 'base.html' %}
