--- a/static/css/common.css
+++ b/static/css/common.css
@@ -23,3 +23,22 @@ p {
     color: #c12e2a;
     font-size: 16px;
 }
+
+div.footer{
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+div.navbar-header{
+    width: 100%;
+}
+
+div.navbar-header .user-info{
+    position: absolute;
+    right: 0;
+    font-size: 18px;
+    padding: 15px;
+    line-height: 20px;
+}
