--- a/static/css/common.css
+++ b/static/css/common.css
@@ -29,6 +29,9 @@ div.footer{
     position: absolute;
     bottom: 0;
     width: 100%;
+    line-height: 16px;
+    font-size: 14px;
+    padding: 10px;
 }
 
 div.navbar-header{
