--- a/templates/base.html
+++ b/templates/base.html
@@ -16,15 +16,18 @@
     <div class="navbar-header">
         <a class="navbar-brand" href="{{url_for('login')}}">运维开发管理平台</a>
         {% if current_user.is_authenticated %}
-            <a class="user-info">注销</a>
+            <a class="user-info" href="{{url_for('logout')}}">注销</a>
         {% endif %}
     </div>
 </nav>
 {% block content %}
 {% endblock %}
+
+{% block footer %}
 <div class="footer">
-    底部版权信息-暂定
+    湖南五八农服©2018
 </div>
+{% endblock %}
 <script src="{{url_for('static',filename='js/jquery-3.3.1.min.js')}}"></script>
 <script src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
 </body>
