--- a/templates/base.html
+++ b/templates/base.html
@@ -12,17 +12,16 @@
     {% endblock %}
 </head>
 <body>
+{% block content %}
+{% endblock %}
 <nav class="navbar navbar-default" role="navigation">
     <div class="navbar-header">
-        <a class="navbar-brand" href="{{url_for('login')}}">运维开发管理平台</a>
+        <a class="navbar-brand" href="{{url_for('index')}}">运维开发管理平台</a>
         {% if current_user.is_authenticated %}
-            <a class="user-info" href="{{url_for('logout')}}">注销</a>
+        <a class="user-info" href="{{url_for('logout')}}">注销</a>
         {% endif %}
     </div>
 </nav>
-{% block content %}
-{% endblock %}
-
 {% block footer %}
 <div class="footer">
     湖南五八农服©2018
