--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,44 @@
 {% extends 'base.html' %}
+{% block css %}
+    {{super()}}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+{% endblock %}
+{% block content %}
+<div class="task-area">
+    <div class="menu">
+        <div class="menu-title">
+            <span class="glyphicon glyphicon-th-list"> 管理面板</span>
+        </div>
+        <div class="menu-content">
+            <ul>
+                <li class="cpanel">
+                <a class="list-group-item active">前端管理</a>
+                <a href="#" class="list-group-item">前端分支管理</a>
+                </li>
+                <li class="cpanel">
+                    <a class="list-group-item active">JAVA包管理</a>
+                    <a href="#" class="list-group-item">测试环境WAR包发布</a>
+                </li>
+                <li class="cpanel">
+                    <a class="list-group-item active">用户管理</a>
+                    <a href="#" class="list-group-item">用户列表</a>
+                    <a href="#" class="list-group-item">增加用户</a>
+                    <a href="#" class="list-group-item">删除用户</a>
+                    <a href="#" class="list-group-item">修改用户</a>
+                </li>
+                <li class="cpanel">
+                    <a class="list-group-item active">角色管理</a>
+                    <a href="#" class="list-group-item">权限列表</a>
+                    <a href="#" class="list-group-item">用户授权</a>
+                </li>
+            </ul>
+        </div>
+        <div class="author">
+
+        </div>
+    </div>
+    <div class="content">
+
+    </div>
+</div>
+{% endblock %}
