--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,25 @@
-{% extends 'base.html' %}
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="运维开发管理平台">
+    <meta name="author" content="西窗浪人">
+    <title>{% block title %}运维开发管理平台{% endblock %}</title>
+    <link rel="icon" href="{{url_for('static',filename='images/fav.ico')}}">
+    {% block css %}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/bootstrap.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='css/common.css')}}">
+    {% endblock %}
+</head>
+<body>
+<nav class="navbar navbar-default" role="navigation">
+    <div class="navbar-header">
+        <a class="navbar-brand" href="{{url_for('index')}}">运维开发管理平台</a>
+        {% if current_user.is_authenticated %}
+        <a class="user-info" href="{{url_for('logout')}}">注销</a>
+        {% endif %}
+    </div>
+</nav>
 <div class="panel panel-primary">
     <div class="panel-heading">
         <h3 class="panel-title">登&nbsp;&nbsp;录</h3>
@@ -23,13 +43,13 @@
                     {% endfor %}
 
                     {% if form.errors.UserName %}
-                        {% for error in form.errors.UserName %}
-                        <p>{{error}}</p>
-                        {% endfor %}
+                    {% for error in form.errors.UserName %}
+                    <p>{{error}}</p>
+                    {% endfor %}
                     {% else %}
-                        {% for error in form.errors.PassWord %}
-                        <p>{{error}}</p>
-                        {% endfor %}
+                    {% for error in form.errors.PassWord %}
+                    <p>{{error}}</p>
+                    {% endfor %}
                     {% endif %}
                 </div>
                 {{form.Submit}}
@@ -37,4 +57,12 @@
         </div>
     </div>
 </div>
+{% block footer %}
+<div class="footer">
+    湖南五八农服©2018
+</div>
 {% endblock %}
+<script src="{{url_for('static',filename='js/jquery-3.3.1.min.js')}}"></script>
+<script src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
+</body>
+</html>
